# ipydagflow

./: .coverage  .gitignore  .gitlab-ci.yml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: docs.yml  publish.yml
docs/: Makefile  api.md  conf.py  example_dynamic_styles.ipynb  example_step_dag.ipynb  getting-started.md  index.md
examples/: example_cycles.ipynb  example_dynamic_styles.ipynb  example_step_dag.ipynb  example_subflow.ipynb
src/ipydagflow/: __init__.py
src/ipydagflow/models/: __init__.py  step.py
src/ipydagflow/utils/: __init__.py  layout.py
src/ipydagflow/widgets/: __init__.py  dynamic_dag.py  step_dag.py
tests/: __init__.py  test_dynamic_dag.py  test_integration.py  test_layout.py  test_step.py  test_step_dag.py
ui/: dynamic_dag.css  dynamic_dag.tsx
