[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipydagflow"
version = "0.0.3"
dependencies = ["anywidget"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "watchfiles",
    "jupyterlab",
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "furo",
    "sphinx-design",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.6.0",
    "watchfiles",
    "jupyterlab",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipydagflow/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipydagflow/static/dynamic_dag.js"]
skip-if-exists = ["src/ipydagflow/static/dynamic_dag.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

# ───────────────────────────────────────
#           Ruff configuration
# ───────────────────────────────────────

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["src/ipydagflow/static"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "C4",     # comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
    "PL",     # pylint (selected rules)
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long → we use Ruff formatter
    "PLR2004",# magic value comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.lint.mccabe]
max-complexity = 12